[gd_scene load_steps=36 format=3 uid="uid://cd8goosvr0g65"]

[ext_resource type="Script" uid="uid://pflytok351ps" path="res://scenes/characters/player_fsm.gd" id="1_22ohq"]
[ext_resource type="PackedScene" uid="uid://c12m13ljkogvh" path="res://scenes/components/squash_stretch_component.tscn" id="2_4hel2"]
[ext_resource type="Texture2D" uid="uid://v1j3ag6pemrp" path="res://assets/art/sprites/characters/player_spritesheet.png" id="2_bo8q2"]
[ext_resource type="Script" uid="uid://b03rny6wmdawq" path="res://scenes/state_machine/state_machine.gd" id="3_tmglo"]
[ext_resource type="Script" uid="uid://dis6epsxjduth" path="res://scenes/state_machine/idle.gd" id="5_k4imo"]
[ext_resource type="Script" uid="uid://v3i3owl0wo3b" path="res://scenes/state_machine/jump.gd" id="5_meydf"]
[ext_resource type="Script" uid="uid://dr3oobs1vi74h" path="res://scenes/state_machine/run.gd" id="5_ybja3"]
[ext_resource type="Script" uid="uid://dwramhsd22xgd" path="res://scenes/state_machine/duck.gd" id="6_348gu"]
[ext_resource type="Script" uid="uid://c4q601r0jqrf3" path="res://scenes/state_machine/fall.gd" id="7_2nyug"]
[ext_resource type="Script" uid="uid://tdvwmq56ynb5" path="res://scenes/state_machine/ground_dash.gd" id="8_4wcr0"]
[ext_resource type="Script" uid="uid://0yalqa5b6wjx" path="res://scenes/state_machine/coyote.gd" id="9_ysamn"]
[ext_resource type="Script" uid="uid://dmn2unjhrkn6e" path="res://scenes/state_machine/glide.gd" id="10_7v8h0"]
[ext_resource type="Script" uid="uid://e20wqkpb0s12" path="res://scenes/state_machine/wall_idle.gd" id="11_ybewe"]
[ext_resource type="Script" uid="uid://b2e6n4ey2wpfj" path="res://scenes/state_machine/wall_climb.gd" id="12_k0at5"]
[ext_resource type="Script" uid="uid://ct46x3er8vpg1" path="res://scenes/state_machine/wall_slide.gd" id="13_3sl2v"]
[ext_resource type="Script" uid="uid://bxbp48rb4rctx" path="res://scenes/state_machine/wall_jump.gd" id="13_dfvpo"]
[ext_resource type="Script" uid="uid://bwrgna4b6xhvn" path="res://scenes/state_machine/wall_coyote.gd" id="16_r74rq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjkkk"]
size = Vector2(12, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3uoab"]
size = Vector2(22.5, 9.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7svu"]
size = Vector2(21, 9)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvaw6"]
bg_color = Color(0.741176, 0.341176, 0.0392157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0901961, 0.0784314, 0.105882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0l2v6"]
bg_color = Color(1, 0.85098, 0.258824, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0901961, 0.0784314, 0.105882, 1)

[sub_resource type="Animation" id="Animation_413s7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yahnf"]
resource_name = "air_transition"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_6d1c5"]
resource_name = "duck"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_q4ap7"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_pln2k"]
resource_name = "glide"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_gwced"]
resource_name = "ground_dash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="Animation" id="Animation_jnirg"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_kn01f"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_shvq4"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_j6y6e"]
resource_name = "wall_climb"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_8vu7j"]
resource_name = "wall_idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_404os"]
resource_name = "wall_slide"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k8m45"]
_data = {
&"RESET": SubResource("Animation_413s7"),
&"air_transition": SubResource("Animation_yahnf"),
&"duck": SubResource("Animation_6d1c5"),
&"fall": SubResource("Animation_q4ap7"),
&"glide": SubResource("Animation_pln2k"),
&"ground_dash": SubResource("Animation_gwced"),
&"idle": SubResource("Animation_jnirg"),
&"jump": SubResource("Animation_kn01f"),
&"run": SubResource("Animation_shvq4"),
&"wall_climb": SubResource("Animation_j6y6e"),
&"wall_idle": SubResource("Animation_8vu7j"),
&"wall_slide": SubResource("Animation_404os")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 63
script = ExtResource("1_22ohq")

[node name="DoubleJumpLabel" type="Label" parent="."]
visible = false
offset_left = -19.0
offset_top = -54.0
offset_right = 21.0
offset_bottom = -31.0
text = "00"
horizontal_alignment = 1

[node name="StateLabel" type="Label" parent="."]
offset_left = -21.0
offset_top = -43.0
offset_right = 19.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 12
text = "Idle"
horizontal_alignment = 1

[node name="SquashStretchComponent" parent="." instance=ExtResource("2_4hel2")]
sprite_path = NodePath("../PlayerSprite")
tween_duration = 0.05
fall_scale = Vector2(0.85, 1.2)

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_bo8q2")
offset = Vector2(0, -12)
hframes = 8
vframes = 7
region_rect = Rect2(576, 0, 64, 64)

[node name="RegularCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -9.5)
shape = SubResource("RectangleShape2D_yjkkk")

[node name="GlideCollision" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -9.25)
shape = SubResource("RectangleShape2D_3uoab")
disabled = true

[node name="GroundDashCollision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -4.5)
shape = SubResource("RectangleShape2D_u7svu")
disabled = true

[node name="SquashTimer" type="Timer" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="GlideStaminaBar" type="ProgressBar" parent="."]
offset_left = -23.0
offset_top = -21.0
offset_right = -17.0
offset_bottom = -4.0
theme_override_constants/outline_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_pvaw6")
theme_override_styles/fill = SubResource("StyleBoxFlat_0l2v6")
step = 0.001
value = 1.0
fill_mode = 3
show_percentage = false

[node name="PlayerAnims" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k8m45")
}
autoplay = "idle"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_tmglo")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "jump_state", "run_state", "ground_dash_state", "duck_state")]
script = ExtResource("5_k4imo")
fall_state = NodePath("../Fall")
jump_state = NodePath("../Jump")
run_state = NodePath("../Run")
ground_dash_state = NodePath("../GroundDash")
duck_state = NodePath("../Duck")
animation_name = "idle"

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("duck_state", "fall_state", "idle_state", "jump_state", "ground_dash_state", "coyote_state")]
script = ExtResource("5_ybja3")
duck_state = NodePath("../Duck")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
ground_dash_state = NodePath("../GroundDash")
coyote_state = NodePath("../Coyote")
animation_name = "run"

[node name="Duck" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "fall_state", "jump_state", "run_state", "ground_dash_state")]
script = ExtResource("6_348gu")
idle_state = NodePath("../Idle")
fall_state = NodePath("../Fall")
jump_state = NodePath("../Jump")
run_state = NodePath("../Run")
ground_dash_state = NodePath("../GroundDash")
animation_name = "duck"

[node name="GroundDash" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "duck_state", "jump_state", "fall_state", "coyote_state")]
script = ExtResource("8_4wcr0")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
duck_state = NodePath("../Duck")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
coyote_state = NodePath("../Coyote")
animation_name = "ground_dash"

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "run_state", "duck_state", "jump_state", "wall_idle_state", "glide_state", "ground_dash_state")]
script = ExtResource("5_meydf")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
duck_state = NodePath("../Duck")
jump_state = NodePath(".")
wall_idle_state = NodePath("../WallIdle")
glide_state = NodePath("../Glide")
ground_dash_state = NodePath("../GroundDash")
jump_buffer_duration = 0.1
animation_name = "jump"

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "duck_state", "jump_state", "wall_idle_state", "glide_state", "ground_dash_state")]
script = ExtResource("7_2nyug")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
duck_state = NodePath("../Duck")
jump_state = NodePath("../Jump")
wall_idle_state = NodePath("../WallIdle")
glide_state = NodePath("../Glide")
ground_dash_state = NodePath("../GroundDash")
jump_buffer_duration = 0.1
animation_name = "fall"

[node name="Coyote" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "duck_state", "jump_state", "glide_state", "wall_idle_state", "fall_state", "ground_dash_state")]
script = ExtResource("9_ysamn")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
duck_state = NodePath("../Duck")
jump_state = NodePath("../Jump")
glide_state = NodePath("../Glide")
wall_idle_state = NodePath("../WallIdle")
fall_state = NodePath("../Fall")
ground_dash_state = NodePath("../GroundDash")
animation_name = "fall"

[node name="Glide" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "jump_state", "fall_state", "wall_idle_state")]
script = ExtResource("10_7v8h0")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
wall_idle_state = NodePath("../WallIdle")
cruise_angle_deg = 15.0
speed_decay_time = 2.0
animation_name = "glide"

[node name="WallIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("wall_climb_state", "wall_slide_state", "wall_jump_state", "wall_coyote_state")]
script = ExtResource("11_ybewe")
wall_climb_state = NodePath("../WallClimb")
wall_slide_state = NodePath("../WallSlide")
wall_jump_state = NodePath("../WallJump")
wall_coyote_state = NodePath("../WallCoyote")
animation_name = "wall_idle"

[node name="WallClimb" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "wall_idle_state", "wall_slide_state", "wall_jump_state", "wall_coyote_state")]
script = ExtResource("12_k0at5")
idle_state = NodePath("../Idle")
wall_idle_state = NodePath("../WallIdle")
wall_slide_state = NodePath("../WallSlide")
wall_jump_state = NodePath("../WallJump")
wall_coyote_state = NodePath("../WallCoyote")
animation_name = "wall_climb"

[node name="WallSlide" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "wall_idle_state", "wall_climb_state", "wall_jump_state", "wall_coyote_state")]
script = ExtResource("13_3sl2v")
idle_state = NodePath("../Idle")
wall_idle_state = NodePath("../WallIdle")
wall_climb_state = NodePath("../WallClimb")
wall_jump_state = NodePath("../WallJump")
wall_coyote_state = NodePath("../WallCoyote")
animation_name = "wall_slide"

[node name="WallJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "run_state", "glide_state", "wall_idle_state")]
script = ExtResource("13_dfvpo")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
glide_state = NodePath("../Glide")
wall_idle_state = NodePath("../WallIdle")
animation_name = "jump"

[node name="WallCoyote" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "run_state", "wall_idle_state", "wall_jump_state", "glide_state")]
script = ExtResource("16_r74rq")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
wall_idle_state = NodePath("../WallIdle")
wall_jump_state = NodePath("../WallJump")
glide_state = NodePath("../Glide")
animation_name = "fall"

[node name="RayCastsContainer" type="Node2D" parent="."]

[node name="CeilingRayCast" type="RayCast2D" parent="RayCastsContainer"]
position = Vector2(0, -9)
scale = Vector2(2.56, 1)
target_position = Vector2(0, -15)
hit_from_inside = true

[node name="FloorRayCast" type="RayCast2D" parent="RayCastsContainer"]
position = Vector2(0, -9)
scale = Vector2(2.56, 1)
target_position = Vector2(0, 11)
hit_from_inside = true

[node name="WallRayCast" type="RayCast2D" parent="RayCastsContainer"]
position = Vector2(0, -9)
scale = Vector2(0.309856, 2.44874)
target_position = Vector2(29.0458, 2.38419e-07)
collision_mask = 20

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.85, 0.85)
position_smoothing_enabled = true
position_smoothing_speed = 15.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.15
drag_top_margin = 0.1
drag_right_margin = 0.15
drag_bottom_margin = 0.1

[connection signal="timeout" from="SquashTimer" to="." method="_on_squash_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
